--- a/src/style.css
+++ b/src/style.css
@@ -5,15 +5,11 @@
 }
 
 body {
-	background: #da1e2d;
+	background: #e74c3c;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-a {
-	text-decoration: none;
-}
-
-.contenedor {
+.container {
 	width: 90%;
 	max-width: 800px;
 	margin: auto;
@@ -27,8 +23,8 @@ header {
 	padding: 40px 0;
 }
 
-header img{
-	width: 30%;
+header .logoPoke{
+	width: 50%;
 }
 
 header .logo {
@@ -37,7 +33,10 @@ header .logo {
 }
 
 header .logo p {
-	color: #fbc30e;
+	font-weight: bold;
+	color: #26394d;
+	text-align: center;
+	font-size: 16px;
 }
 
 header form {
@@ -54,59 +53,65 @@ header .barra-busqueda {
 	background: #e4e4e5;
 	color: #34495e;
 	padding: 0 20px;
+	border-style: solid;
 	border-radius: 100px;
-	border: none;
+	border-color: #2a4381;
 	text-align: center;
 	font-size: 16px;
+	margin-bottom: 20px;
 }
 
 header .nav {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	flex-wrap: wrap;
 }
 
-header .nav a {
+.boton {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	color: #fbc30e;
-	margin: 10px 20px;
-	font-size: 18px;
-	font-weight: 700;
+	background-color: #2a4381;
+	border-radius: 10px;
+	padding: 10px;
+	font-size: 16px;
+	font-weight: bold; 
 }
 
-header .nav a.activo {
-	color: #e4e4e5;
+.boton:hover {
+	background-color: #3c5aa6;
+	cursor: pointer;
 }
 
-ul, ol{
-	list-style: none;
-	}
-	
-	.nav li a{
-	background-color: #da1e2d;
-	color: #e4e4e5;
-	margin: 10px 20px;
-	font-size: 18px;
-	font-weight: 700;
-	}
-	.nav>li a:hover{
-		background-color: #fbc30e;
-		color: #176a9c;
-		border-radius: 20px;
-		padding: 10px;
-		
-	  }
-	.nav li ul{
-	display: none;
-	position: absolute;
-	min-width: 140px;
-	}
-	
-	.nav>li{
-	  float: left;
-	}
-	.nav li:hover>ul{
-	  display:block;
-	}
+.labelTitle {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	color: #fbc30e;
+	background-color: #2a4381;
+	border-radius: 10px;
+	padding: 10px;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.labelTitle .filterType {
+	border-radius: 10px;
+	background-color: #e4e4e5;
+	color: #203363;
+	cursor: pointer;
+}
+
+.labelTitle .filterWeakness {
+	border-radius: 10px;
+	background-color: #e4e4e5;
+	color: #203363;
+	cursor: pointer;
+}
+
+.labelTitle .filterOrder {
+	border-radius: 10px;
+	background-color: #e4e4e5;
+	color: #203363;
+	cursor: pointer;
+}
 
 /* ------------------------- */
 /* FOOTER */
@@ -116,8 +121,94 @@ footer .creado-por {
 	margin-bottom: 40px;
 	text-align: center;
 	font-size: 14px;
-	color: #fbc30e;
+	font-weight: bold;
+	color: #26394d;
 }
+
+/* ------------------------- */
+/* CARD */
+/* ------------------------- */
+
+.wrap{
+	margin: 50px auto;
+	display: inline-flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 300px;
+	height: 350px;
+	}
+	.front{
+	text-align: center;
+	color: #fbc30e;
+	font-size: 18px;
+	}
+		
+	.front > h4{
+	padding-top: 12px;
+	padding-bottom: 8px ;
+	font-weight: bold;
+	background: #2a4381;
+	border-radius: 20px;
+	margin: 18px;
+}
+.front > p {
+font-weight: bold;	
+}
+	
+.imagen{
+	height: 150px;
+	}
+	
+	.card-wrap{
+		margin: 10px;
+		-webkit-perspective: 800;
+		perspective: 800;
+
+	}
+	
+	.card{
+	text-align: center;
+	border-radius: 10px;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	letter-spacing: 0,03em;
+	width: 250px;
+	height: 300px;
+	background: hsl(46, 89%, 54%);
+	position: relative;
+	transform-style: preserve-3d;
+	transition: .7s ease;
+	-webkit-box-shadow: 0px 10px 15px -5px rgba(0,0,0, 0.65);
+	-moz-box-shadow: 0px 10px 15px -5px rgba(0,0,0, 0.65);
+	box-shadow: 0px 10px 15px -5px rgba(0,0,0, 0.65);
+	}
+	
+	.front, .back{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-webkit-backface-visibility:hidden;
+	backface-visibility: hidden;
+	}
+	
+	.back{
+		transform: rotateY(180deg);
+		padding: 15px;
+		padding-left: 30px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: left;
+		line-height: 30px;
+		font-weight: bold;
+		color: #26394d;
+	
+	}
+	.card-wrap:hover .card{
+		transform:rotateY(180deg);
+	
+	}
 
 /* ------------------------- */
 /* Mediaqueries */
@@ -127,17 +218,24 @@ footer .creado-por {
 
 }
 
-@media screen and (max-width: 750px) {
-	header .nav {
-		flex-direction: column;
-    }
-
-	.grid .item {
-		width: calc(50% - 20px);
-	}
-
+@media all and (max-width: 750px) {
 	header .barra-busqueda {
+		margin-bottom: 20px;
 		width: 100%;
 	}
+
+	header .nav{
+		flex-direction: column-reverse;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+	
+	header .nav .column {
+		margin-bottom: 50px;
+	}
+
+
+
 }
 
